# stock-trader

./: .gitignore  AGENTS.md  DEPLOY.md  README.md  pyproject.toml  render.yaml  requirements-ui.txt  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
scripts/: capture_ui_screenshot.py  deploy-render.sh  setup.sh  start-ui.sh
src/stock_trader/: __init__.py  aurum_momentum.py  backtest.py  benchmarks.py  charts.py  cli.py  composite_momentum.py  crash_backtest.py  crash_probability.py  crash_warning.py  dual_momentum.py  equity_rotation.py  faber.py  gem.py  hybrid.py  leading_crash.py  market_data.py  metrics.py  models.py  momentum_util.py  multi_asset.py  portfolio.py  regime.py  risk_parity.py  ui.py  ui_launcher.py  vaa.py  vol_target.py  watchlist.py
src/stock_trader/strategies/: __init__.py  base.py  bollinger.py  ema.py  macd.py  momentum.py  rsi.py  sma.py
tests/: test_advanced_strategies.py  test_crash_warning.py  test_market_data.py  test_regime.py  test_stock_trader.py
