[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-trader"
version = "0.1.0"
description = "Paper trading and backtesting toolkit for stocks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
ui = [
    "streamlit>=1.32",
    "plotly>=5.20",
]

[project.scripts]
stock-trader = "stock_trader.cli:main"
stock-trader-ui = "stock_trader.ui_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
